changes added to documentation

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,1 +1,7 @@
-v0.1, 2012-09-08 -- Initial release.
+v0.1, 2012-09-08 
+----------------
+Initial release.
+
+v0.2, 2013-01-11 
+----------------
+Direct upload is added
